--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,6 +24,10 @@ body {
 	background-color: var(--background-color);
 }
 
+.box-shadow {
+	box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.2);
+}
+
 h1, h2, p, a {
 	font-family: var(--font-family);
 }
